# crawler-vehicle

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/basic_ctrl/: swing.h
devel/include/four_motor_ctrl/: motorinfo.h
devel/lib/basic_ctrl/: joy_itrctrl  joy_node
devel/lib/four_motor_ctrl/: xzl_ctrl
devel/lib/pkgconfig/: basic_ctrl.pc  four_motor_ctrl.pc
devel/lib/python2.7/dist-packages/basic_ctrl/msg/: __init__.py  _swing.py
devel/lib/python2.7/dist-packages/four_motor_ctrl/msg/: __init__.py  _motorinfo.py
devel/share/basic_ctrl/cmake/: basic_ctrl-msg-paths.cmake  basic_ctrlConfig.cmake
devel/share/common-lisp/ros/basic_ctrl/msg/: _package.lisp  _package_swing.lisp  basic_ctrl-msg.asd  swing.lisp
devel/share/common-lisp/ros/four_motor_ctrl/msg/: _package.lisp  motorinfo.lisp  (+2 more)
devel/share/four_motor_ctrl/cmake/: four_motor_ctrl-msg-extras.cmake  four_motor_ctrl-msg-paths.cmake  four_motor_ctrlConfig.cmake
devel/share/roseus/ros/basic_ctrl/: manifest.l
devel/share/roseus/ros/four_motor_ctrl/: manifest.l
src/basic_ctrl/: CMakeLists.txt  package.xml
src/basic_ctrl/config/: params.yaml
src/basic_ctrl/launch/: run.launch
src/basic_ctrl/msg/: swing.msg
src/basic_ctrl/src/: joy_ctrl.cpp  joy_itrctrl.cpp  joy_node.cpp
src/four_motor_ctrl/: CMakeLists.txt  package.xml
src/four_motor_ctrl/include/: four_motor_ctrl.h
src/four_motor_ctrl/launch/: .transcar.launch.swp  transcar.launch
src/four_motor_ctrl/msg/: motorinfo.msg
src/four_motor_ctrl/src/: four_motor_ctrl.cpp  test_ctrl.cpp
src/my_package/: CMakeLists.txt
(+6 files in other folders)
